# ssslite

./: .gitignore  Dockerfile  README.md  gunicorn.py  ibp.html  index.html  kubernetes_prod.yaml  kubernetes_uat.yaml  pyproject.toml  ssslite.py  todaysburns.html
.github/: dependabot.yml
.github/workflows/: image-build-scan.yml  multi-build.yaml  security-msdo-defender.yml
kustomize/: README.md
kustomize/base/: deployment.yaml  deployment_hpa.yaml  kustomization.yaml  networkpolicy-egress-deny.yaml  networkpolicy-egress.yaml  networkpolicy-ingress-deny.yaml  networkpolicy-ingress.yaml  service.yaml
kustomize/overlays/prod/: deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
kustomize/overlays/uat/: deployment_hpa_patch.yaml  deployment_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service_patch.yaml
static/: ibp.js  todaysburns.js
