[project]
name = "ssslite"
version = "1.0.6"
description = "Lightweight embeddable HTML spatial data pages for DBCA"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "bottle==0.13.4",
  "gunicorn==23.0.0",
  "python-dotenv==1.2.1",
  "requests==2.32.5",
]

[dependency-groups]
dev = ["ipython>=9.9.0"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["E265", "E501", "E722"]
