[project]
name = "ssslite"
version = "1.0.9"
description = "Lightweight embeddable HTML spatial data pages for DBCA"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "bottle==0.13.4",
  "gunicorn[fast]==25.3.0",
  "python-dotenv==1.2.2",
  "requests==2.33.0",
]

[dependency-groups]
dev = ["ipython>=9.11.0"]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["E265", "E501", "E722"]
